--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -22,7 +23,7 @@
             android:name=".Registro.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Registro.registro"
+            android:name=".Login.LoginActivity"
             android:exported="false" /> <!-- SplashActivity como punto de entrada -->
         <activity
             android:name=".Login.SplashActivity"
