--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -20,14 +21,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeguridadCiudadana">
         <activity
+            android:name=".Contactos.EscanearQRActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Contactos.ContactosFragment"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
+        <activity
             android:name=".Perfil.MostrarQRActivity"
             android:exported="false" />
         <activity
             android:name=".Registro.RegisterActivity"
             android:exported="false" />
-        <activity
-            android:name=".Registro.registro"
-            android:exported="false" /> <!-- SplashActivity como punto de entrada -->
+        <!-- <activity
+             android:name=".Registro.registro"
+             android:exported="false" />  SplashActivity como punto de entrada -->
         <activity
             android:name=".Login.SplashActivity"
             android:exported="true">
@@ -55,14 +64,10 @@
             android:value="AIzaSyDhRd5FtyWJo2Xs9TaCyvVT1_l4O3hFelI" />
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-
-        <!-- Se agrego esto para NOTIFICACIONES -->
+            android:resource="@array/preloaded_fonts" /> <!-- Se agrego esto para NOTIFICACIONES -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="seguridad_alerts" />
-
-        <!-- Servicio de Firebase Cloud Messaging -->
+            android:value="seguridad_alerts" /> <!-- Servicio de Firebase Cloud Messaging -->
         <service
             android:name=".push.MyFirebaseMessagingService"
             android:exported="false">
