--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permisos necesarios -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
+
+    <!-- Cámara opcional -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -23,23 +26,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeguridadCiudadana">
 
-        <activity
-            android:name=".ChatActivity"
-            android:exported="false"
-            android:theme="@style/Theme.SeguridadCiudadana" />
+        <!-- Actividades -->
         <activity
             android:name=".CrearChatActivity"
             android:exported="false"
             android:theme="@style/Theme.SeguridadCiudadana" />
 
-        <!-- Eliminé ChatsFragment porque es un Fragment, no Activity -->
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SeguridadCiudadana" />
 
-        <!-- Registro (eliminé el duplicado) -->
         <activity
             android:name=".Registro.RegisterActivity"
             android:exported="false" />
 
-        <!-- SplashActivity como punto de entrada -->
+        <activity
+            android:name=".Login.LoginActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Contactos.EscanearQRActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Perfil.MostrarQRActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Pin.CreatePinActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Pin.UnlockPinActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <!-- Splash (punto de entrada) -->
         <activity
             android:name=".Login.SplashActivity"
             android:exported="true">
@@ -49,33 +75,15 @@
             </intent-filter>
         </activity>
 
-        <!-- Resto de actividades -->
-        <activity
-            android:name=".Login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Contactos.EscanearQRActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Perfil.MostrarQRActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Pin.CreatePinActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Pin.UnlockPinActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-
-        <!-- Meta-data y services -->
+        <!-- Meta-data y servicios -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDhRd5FtyWJo2Xs9TaCyvVT1_l4O3hFelI" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="seguridad_alerts" />
@@ -87,6 +95,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-    </application>
 
+    </application>
 </manifest>
