--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
             android:name=".Pin.UnlockPinActivity"
             android:exported="false" />
         <activity
+            android:name=".Registro.RolUsuarioActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" /> <!-- Splash (punto de entrada) -->
         <activity
